# chatbot_backend

./: .gitignore  README.md  app.py  connect_memory_with_llm.py  create_memory_for_LLM.py  main.py  production_ready.py  pyproject.toml  requirements.txt  streamlit.py
faiss_index/: index.faiss  index.pkl
vectorstore/db_faiss/: index.faiss  index.pkl
