[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "huggingface-hub>=0.31.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "openai>=1.79.0",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
